Add semantic-ui css.

--- a/src/app/components/b-club-navbar/b-club-navbar.component.html
+++ b/src/app/components/b-club-navbar/b-club-navbar.component.html
@@ -1,3 +1,8 @@
-<p>
-  b-club-navbar works!
-</p>
+<div class="b-club-navbar-container">
+  <div class="b-club-navbar-logo"><img [src]="logoURL"/></div>
+  <div class="ui secondary pointing menu">
+    <a class="item">
+      Home
+    </a>
+  </div>
+</div>
