--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<b-club-navbar></b-club-navbar>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
