Add navbar item selection feature.

--- a/src/app/components/b-club-navbar-item/b-club-navbar-item.component.html
+++ b/src/app/components/b-club-navbar-item/b-club-navbar-item.component.html
@@ -1,3 +1,4 @@
-<p>
-  b-club-navbar-item works!
-</p>
+<a class="item" [class.active]="isActive" [attr.href]="route" (click)="clickItem()">
+    {{itemTitle}}
+</a>
+`
