Add route links.

--- a/src/app/components/b-club-navbar-item/b-club-navbar-item.component.html
+++ b/src/app/components/b-club-navbar-item/b-club-navbar-item.component.html
@@ -1,4 +1,4 @@
-<a class="item" [class.active]="isActive" [attr.href]="route" (click)="clickItem()">
+<a class="item" [class.active]="isActive" [attr.href]="route" [routerLink]="route" (click)="clickItem()">
     {{itemTitle}}
     <i *ngIf="isDropdown" class="dropdown icon"></i>
 </a>
