--- a/src/app/components/b-club-container/b-club-container.component.html
+++ b/src/app/components/b-club-container/b-club-container.component.html
@@ -1,6 +1,6 @@
 <div class="b-club-container">
   <div class="b-club-left-container">
-    <b-club-home></b-club-home>
+    <router-outlet></router-outlet>
   </div>
   <mat-divider class="b-club-app-divider" [vertical]="true"></mat-divider>
   <div class="b-club-right-container">This is a board.</div>
