Add gallery samples.

--- a/src/app/components/b-club-home/b-club-home.component.html
+++ b/src/app/components/b-club-home/b-club-home.component.html
@@ -1,3 +1,15 @@
-<p>
-  b-club-home works!
-</p>
+<div class="b-club-gallery">
+  <div class="activity-gallery">
+      <div class="b-club-activity-header">
+        {{clubHeaderTitle}}
+      </div>
+      <b-club-gallery></b-club-gallery>
+  </div>
+  <div class="fans-gallery">
+      <div class="b-club-fans-header">
+        {{fansHeaderTitle}}
+      </div>
+      <b-club-gallery></b-club-gallery>
+  </div>
+  <mat-divider class="b-club-home-divider"></mat-divider>
+</div>
