--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@ngx-gallery/core/styles/gallery.css';
+@import '~@ngx-gallery/core/styles/lightbox.css';
