Add board layout.

--- a/src/app/components/b-club-container/b-club-container.component.html
+++ b/src/app/components/b-club-container/b-club-container.component.html
@@ -3,5 +3,8 @@
     <router-outlet></router-outlet>
   </div>
   <mat-divider class="b-club-app-divider" [vertical]="true"></mat-divider>
-  <div class="b-club-right-container">This is a board.</div>
+  <div class="b-club-right-container">
+      <b-club-board></b-club-board>
+      <mat-divider></mat-divider>
+  </div>
 </div>
