--- a/src/app/components/b-club-home/b-club-home.component.html
+++ b/src/app/components/b-club-home/b-club-home.component.html
@@ -1,14 +1,14 @@
 <div class="b-club-gallery">
   <div class="activity-gallery">
-      <div class="b-club-activity-header">
+      <div class="ui black segment b-club-activity-header">
         {{clubHeaderTitle}}
       </div>
       <b-club-gallery></b-club-gallery>
   </div>
   <div class="fans-gallery">
-      <div class="b-club-fans-header">
-        {{fansHeaderTitle}}
-      </div>
+      <div class="ui black segment b-club-activity-header">
+          {{fansHeaderTitle}}
+        </div>
       <b-club-gallery></b-club-gallery>
   </div>
   <mat-divider class="b-club-home-divider"></mat-divider>
