--- a/src/app/components/b-club-gallery/b-club-gallery.component.html
+++ b/src/app/components/b-club-gallery/b-club-gallery.component.html
@@ -1,5 +1,6 @@
-<div class="grid">
+<!-- <div class="grid">
   <button mat-raised-button class="grid-item" *ngFor="let item of imageItems; let i = index" (click)="lightbox.open(i)">
     <span class="grid-image" [style.backgroundImage]="'url('+ item.data.thumb +')'"></span>
   </button>
-</div>
+</div> -->
+<div class="gallery-container"><gallery class="gallery-box" thumbPosition="left" zoomOut="0" [items]="imageItems"></gallery></div>
