Remove legacy code.

--- a/src/app/components/b-club-board/b-club-board.component.html
+++ b/src/app/components/b-club-board/b-club-board.component.html
@@ -1,29 +1,9 @@
 <div class="b-club-board-container">
-  <div class="ui black segment b-club-board-header">
+  <!-- <div class="ui black segment b-club-board-header">
     <a class="ui teal ribbon label">{{boardInfo.boardActType}}</a>
     {{boardActivityTitle}}
-    <!-- <div class="b-club-activity-type"><a class="ui teal tag label">DAILY</a></div> -->
-    <!-- <div class="ui green right corner label">
-        <i class="bell outline icon"></i>
-    </div> -->
   </div>
   <div class="b-club-board-calendar">
-    <!-- <table class="ui single line table">
-      <tbody>
-        <tr>
-          <td>Date:</td>
-          <td>{{boardActStartDate}}</td>
-        </tr>
-        <tr>
-          <td>Time:</td>
-          <td>{{boardActStartTime}} -- {{boardActEndTime}}</td>
-        </tr>
-        <tr>
-          <td>Court:</td>
-          <td>{{boardActCourt}}</td>
-        </tr>
-      </tbody>
-    </table> -->
     <div class="ui cards">
       <div class="card b-club-activity-card">
         <div class="content">
@@ -92,5 +72,5 @@
   </div>
   <div class="ui raised segment">
     <p>{{boardInfo.boardClubAnnouncement}}</p>
-  </div>
+  </div> -->
 </div>
