--- a/src/app/components/b-club-gallery/b-club-gallery.component.html
+++ b/src/app/components/b-club-gallery/b-club-gallery.component.html
@@ -3,4 +3,4 @@
     <span class="grid-image" [style.backgroundImage]="'url('+ item.data.thumb +')'"></span>
   </button>
 </div> -->
-<div class="gallery-container"><gallery class="gallery-box" thumbPosition="left" zoomOut="0" [items]="imageItems"></gallery></div>
+<div class="gallery-container">Gallery here</div>
