--- a/src/app/components/b-club-home/b-club-home.component.html
+++ b/src/app/components/b-club-home/b-club-home.component.html
@@ -1,15 +1,15 @@
 <div class="b-club-gallery">
   <div class="activity-gallery">
-      <div class="ui black segment b-club-activity-header">
+      <div class="b-club-activity-header">
         {{clubHeaderTitle}}
       </div>
       <b-club-gallery></b-club-gallery>
   </div>
-  <div class="fans-gallery">
+  <!-- <div class="fans-gallery">
       <div class="ui black segment b-club-activity-header">
           {{fansHeaderTitle}}
         </div>
       <b-club-gallery></b-club-gallery>
-  </div>
+  </div> -->
   <mat-divider class="b-club-home-divider"></mat-divider>
 </div>
