Use ng material to design navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="b-club-app-root mat-app-background">
-  <b-club-navbar></b-club-navbar>
+  <b-club-navbar class="b-club-navbar"></b-club-navbar>
   <b-club-container></b-club-container>
 </div>
 
