--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,11 @@
     width: 100%;
     height: 100%;
 }
+
+.b-club-navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+}
