--- a/src/app/components/b-club-container/b-club-container.component.css
+++ b/src/app/components/b-club-container/b-club-container.component.css
@@ -1,13 +1,11 @@
 .b-club-container {
-    overflow: auto;
-    margin: 0 auto;
-    width: 80%;
-    height: calc(100% - 50px);
-    position: relative;
-    background-color: white;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border: 1px solid lightgrey;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 56px;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .b-club-left-container {
     width: 70%;
